--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "autoload": {
         "psr-4": { "Eko\\FeedBundle\\": "" }
     },
+    "target-dir": "Eko/FeedBundle",
     "extra": {
         "branch-alias": {
             "dev-master": "1.1.x-dev"
